testsuite/tests/generic-optional-arguments/extension_not_allowed.compilers.reference
File "extension_not_allowed.ml", line 12, characters 15-21:
12 |   val concat : ?'sep:string -> string list -> string
                    ^^^^^^
Error: Syntax error: Generic optional arguments are not allowed. Make sure you have the correct language extension enabled.
